// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-base-ce render base route data snap 1`] = `
[
  {
    "element": <div>
      home
    </div>,
    "key": "home",
    "path": "/",
  },
  {
    "element": <div>
      userCenter
    </div>,
    "key": "userCenter",
    "path": "/user-center",
  },
  {
    "element": <div>
      system
    </div>,
    "key": "system",
    "path": "/system",
  },
  {
    "element": <div>
      account
    </div>,
    "key": "account",
    "path": "/account",
  },
  {
    "element": <div>
      dataSourceManagement
    </div>,
    "key": "dataSourceManagement",
    "path": "/data-source-management",
  },
  {
    "element": <div>
      transit
    </div>,
    "key": "transit",
    "path": "/transit",
  },
  {
    "children": [
      {
        "element": <div>
          member
        </div>,
        "key": "member",
        "path": ":projectID/member",
      },
      {
        "children": [
          {
            "element": <div>
              dataSourceList
            </div>,
            "key": "dataSourceList",
            "path": "",
          },
          {
            "element": <div>
              dataSourceCreate
            </div>,
            "key": "dataSourceCreate",
            "path": "create",
          },
          {
            "element": <div>
              dataSourceUpdate
            </div>,
            "key": "dataSourceUpdate",
            "path": "update/:dbServiceUid",
          },
        ],
        "element": <div
          data-test-parent-id="dataSource"
        >
          <Outlet />
        </div>,
        "key": "dataSource",
        "path": ":projectID/db-services",
      },
      {
        "element": <div>
          dataExportManagement
        </div>,
        "key": "dataExportManagement",
        "path": ":projectID/data/export",
      },
      {
        "element": <div>
          cloudBeaver
        </div>,
        "key": "cloudBeaver",
        "path": ":projectID/cloud-beaver",
      },
    ],
    "element": <div
      data-test-parent-id="projectDetail"
    >
      <Outlet />
    </div>,
    "key": "projectDetail",
    "path": "/project/*",
  },
  {
    "element": <div>
      reportStatistics
    </div>,
    "key": "reportStatistics",
    "path": "/sqle/report-statistics",
  },
  {
    "element": <div>
      rule
    </div>,
    "key": "rule",
    "path": "/sqle/rule",
  },
  {
    "element": <div>
      globalRuleTemplateDetail
    </div>,
    "key": "globalRuleTemplateDetail",
    "path": "/sqle/rule-manager/global-detail/:templateName/:dbType",
  },
  {
    "children": [
      {
        "element": <div>
          ruleTemplateManagement
        </div>,
        "key": "ruleTemplateManagement",
        "path": "",
      },
      {
        "element": <div>
          globalRuleTemplateCreate
        </div>,
        "key": "globalRuleTemplateCreate",
        "path": "global-create",
      },
      {
        "element": <div>
          globalRuleTemplateImport
        </div>,
        "key": "globalRuleTemplateImport",
        "path": "global-import",
      },
      {
        "element": <div>
          globalRuleTemplateUpdate
        </div>,
        "key": "globalRuleTemplateUpdate",
        "path": "global-update/:templateName",
      },
      {
        "element": <div>
          createCustomRule
        </div>,
        "key": "createCustomRule",
        "path": "custom-create",
      },
      {
        "element": <div>
          updateCustomRule
        </div>,
        "key": "updateCustomRule",
        "path": "custom-update/:ruleID",
      },
    ],
    "element": <div
      data-test-parent-id="ruleManager"
    >
      <Outlet />
    </div>,
    "key": "ruleManager",
    "path": "/sqle/rule-manager",
  },
  {
    "children": [
      {
        "element": <div>
          knowledgeIndex
        </div>,
        "key": "knowledgeIndex",
        "path": "",
      },
    ],
    "element": <div
      data-test-parent-id="knowledge"
    >
      <Outlet />
    </div>,
    "key": "knowledge",
    "path": "/sqle/knowledge",
  },
  {
    "element": <div>
      globalDashboard
    </div>,
    "key": "globalDashboard",
    "path": "/sqle/global-dashboard",
  },
  {
    "children": [
      {
        "element": <div>
          projectOverview
        </div>,
        "key": "projectOverview",
        "path": ":projectID/overview",
      },
      {
        "children": [
          {
            "element": <div>
              sqlExecWorkflowList
            </div>,
            "key": "sqlExecWorkflowList",
            "path": "",
          },
          {
            "element": <div>
              createSqlExecWorkflow
            </div>,
            "key": "createSqlExecWorkflow",
            "path": "create",
          },
          {
            "element": <div>
              workflowAnalyze
            </div>,
            "key": "workflowAnalyze",
            "path": ":taskId/:sqlNum/analyze",
          },
          {
            "element": <div>
              workflowDetail
            </div>,
            "key": "workflowDetail",
            "path": ":workflowId",
          },
          {
            "element": <div>
              workflowSqlFileStatementOverview
            </div>,
            "key": "workflowSqlFileStatementOverview",
            "path": ":taskId/files/:fileId/sqls",
          },
        ],
        "element": <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <Outlet />
        </div>,
        "key": "sqlExecWorkflow",
        "path": ":projectID/exec-workflow",
      },
      {
        "children": [
          {
            "element": <div>
              sqlAuditList
            </div>,
            "key": "sqlAuditList",
            "path": "",
          },
          {
            "element": <div>
              sqlAuditCreate
            </div>,
            "key": "sqlAuditCreate",
            "path": "create",
          },
          {
            "element": <div>
              sqlAuditDetail
            </div>,
            "key": "sqlAuditDetail",
            "path": "detail/:sql_audit_record_id",
          },
          {
            "element": <div>
              sqlAuditCreateOptimization
            </div>,
            "key": "sqlAuditCreateOptimization",
            "path": "create-optimization",
          },
          {
            "element": <div>
              sqlOptimizationResult
            </div>,
            "key": "sqlOptimizationResult",
            "path": "optimization-result/:optimizationId",
          },
        ],
        "element": <div
          data-test-parent-id="sqlAudit"
        >
          <Outlet />
        </div>,
        "key": "sqlAudit",
        "path": ":projectID/sql-audit",
      },
      {
        "children": [
          {
            "element": <div>
              SqlManagementConfList
            </div>,
            "key": "SqlManagementConfList",
            "path": "",
          },
          {
            "element": <div>
              CreateSqlManagementConf
            </div>,
            "key": "CreateSqlManagementConf",
            "path": "create",
          },
          {
            "element": <div>
              UpdateSqlManagementConf
            </div>,
            "key": "UpdateSqlManagementConf",
            "path": "update/:id",
          },
          {
            "element": <div>
              SqlManagementConfDetail
            </div>,
            "key": "SqlManagementConfDetail",
            "path": ":id",
          },
          {
            "element": <div>
              SqlManagementConfAnalyze
            </div>,
            "key": "SqlManagementConfAnalyze",
            "path": ":instanceAuditPlanId/analyze/:id",
          },
        ],
        "element": <div
          data-test-parent-id="sqlManagementConf"
        >
          <Outlet />
        </div>,
        "key": "sqlManagementConf",
        "path": ":projectID/sql-management-conf",
      },
      {
        "element": <div>
          sqlInsights
        </div>,
        "key": "sqlInsights",
        "path": ":projectID/sql-insights",
      },
      {
        "children": [
          {
            "element": <div>
              SqlManagement
            </div>,
            "key": "SqlManagement",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="sqlManagement"
        >
          <Outlet />
        </div>,
        "key": "sqlManagement",
        "path": ":projectID/sql-management",
      },
      {
        "element": <div>
          dashboard
        </div>,
        "key": "dashboard",
        "path": ":projectID/dashboard",
      },
      {
        "children": [
          {
            "element": <div>
              ruleTemplate
            </div>,
            "key": "ruleTemplate",
            "path": "",
          },
          {
            "element": <div>
              ruleTemplate
            </div>,
            "key": "ruleTemplate",
            "path": "list",
          },
          {
            "element": <div>
              ruleTemplateCreate
            </div>,
            "key": "ruleTemplateCreate",
            "path": "create",
          },
          {
            "element": <div>
              ruleTemplateImport
            </div>,
            "key": "ruleTemplateImport",
            "path": "import",
          },
          {
            "element": <div>
              ruleTemplateDetail
            </div>,
            "key": "ruleTemplateDetail",
            "path": "detail/:templateName/:dbType",
          },
          {
            "element": <div>
              ruleTemplateUpdate
            </div>,
            "key": "ruleTemplateUpdate",
            "path": "update/:templateName",
          },
        ],
        "element": <div
          data-test-parent-id="ruleTemplate"
        >
          <Outlet />
        </div>,
        "key": "ruleTemplate",
        "path": ":projectID/rule/template",
      },
      {
        "children": [
          {
            "element": <div>
              progressDetail
            </div>,
            "key": "progressDetail",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="progress"
        >
          <Outlet />
        </div>,
        "key": "progress",
        "path": ":projectID/progress",
      },
      {
        "element": <div>
          Whitelist
        </div>,
        "key": "Whitelist",
        "path": ":projectID/whitelist",
      },
      {
        "element": <div>
          sqlManagementException
        </div>,
        "key": "sqlManagementException",
        "path": ":projectID/sql-management-exception",
      },
      {
        "element": <div>
          operationRecord
        </div>,
        "key": "operationRecord",
        "path": ":projectID/operation-record",
      },
      {
        "children": [
          {
            "element": <div>
              pluginAuditList
            </div>,
            "key": "pluginAuditList",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="pluginAudit"
        >
          <Outlet />
        </div>,
        "key": "pluginAudit",
        "path": ":projectID/plugin-audit",
      },
      {
        "element": <div>
          pushRuleConfiguration
        </div>,
        "key": "pushRuleConfiguration",
        "path": ":projectID/push-rule",
      },
      {
        "children": [
          {
            "element": <div>
              pipelineConfigurationList
            </div>,
            "key": "pipelineConfigurationList",
            "path": "",
          },
          {
            "element": <div>
              createPipelineConfiguration
            </div>,
            "key": "createPipelineConfiguration",
            "path": "create",
          },
          {
            "element": <div>
              updatePipelineConfiguration
            </div>,
            "key": "updatePipelineConfiguration",
            "path": "update/:id",
          },
        ],
        "element": <div
          data-test-parent-id="pipelineConfiguration"
        >
          <Outlet />
        </div>,
        "key": "pipelineConfiguration",
        "path": ":projectID/pipeline-configuration",
      },
      {
        "children": [
          {
            "element": <div>
              VersionManagementList
            </div>,
            "key": "VersionManagementList",
            "path": "",
          },
        ],
        "element": <div
          data-test-parent-id="versionManagement"
        >
          <Outlet />
        </div>,
        "key": "versionManagement",
        "path": ":projectID/version-management",
      },
      {
        "element": <div>
          dataSourceComparison
        </div>,
        "key": "dataSourceComparison",
        "path": ":projectID/data-source-comparison",
      },
      {
        "element": <div>
          projectRedirect
        </div>,
        "key": "projectRedirect",
        "path": "*",
      },
    ],
    "element": <div
      data-test-parent-id="sqleProjectDetail"
    >
      <Outlet />
    </div>,
    "key": "sqleProjectDetail",
    "path": "/sqle/project/*",
  },
  {
    "element": <div>
      notFound
    </div>,
    "key": "notFound",
    "path": "*",
  },
]
`;

exports[`base/router-base-ce render base router when version is ce render router account 1`] = `
<body>
  <div>
    <div>
      account
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router home 1`] = `
<body>
  <div>
    <div>
      home
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="projectDetail"
    >
      <div
        data-test-parent-id="dataSource"
      >
        <div>
          dataSourceCreate
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="projectDetail"
    >
      <div
        data-test-parent-id="dataSource"
      >
        <div>
          dataSourceList
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="projectDetail"
    >
      <div
        data-test-parent-id="dataSource"
      >
        <div>
          dataSourceUpdate
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route member 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="projectDetail"
    >
      <div>
        member
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render router cloud-beaver 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="projectDetail"
    >
      <div>
        cloudBeaver
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router system 1`] = `
<body>
  <div>
    <div>
      system
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router transit 1`] = `
<body>
  <div>
    <div>
      transit
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router user-center 1`] = `
<body>
  <div>
    <div>
      userCenter
    </div>
  </div>
</body>
`;
